# ipShield

./: README.md
app/routes/: search.py
app/solana/: client.py  transactions.py
backend/: .gitignore  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/crawler/: google_search.py  parse_results.py  serpapi_client.py
backend/app/matcher/: fuzzy_match.py  text_similarity.py
backend/app/routes/: dcma.py  history.py  save.py  search.py  upload.py
backend/app/solana/: client.py  transactions.py
backend/app/utils/: hasher.py  ipfs.py  validator.py
frontend/: .gitignoe  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/components/: Navbar.js  WalletConnect.js
frontend/src/app/context/: WalletContext.js
frontend/src/app/report/: page.js
frontend/src/app/search/: page.js
frontend/src/app/styles/: upload.css
frontend/src/app/upload/: page.js
solana/ipshield/: Anchor.toml  Cargo.toml
solana/ipshield/keypairs/: ipshield_program.json
solana/ipshield/programs/ipshield/: Cargo.toml
solana/ipshield/programs/ipshield/src/: lib.rs
solana_project/: .gitignore  Anchor.toml  Cargo.toml
solana_project/keypairs/: deployer.json
solana_project/programs/ipshield/: Anchor.toml  Cargo.toml
solana_project/programs/ipshield/src/: lib.rs
